<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="395dp">

        <TextView
            android:id="@+id/score1_label"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@android:color/darker_gray"
            android:text="@string/score1_label"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/score1_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#656D18"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/score1_value"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="24sp" />

        <Button
            android:id="@+id/inc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/inc_button1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/holo_purple"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/LightSalmon"
            android:text="@string/dec_button1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/score2_label"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Tomato"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/_twenty"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="italic"
            android:autofillHints="" />

        <Button
            android:id="@+id/inc_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/inc_button2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/green"
            android:textSize="50sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Gold"
            android:text="@string/dec_button2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/actionModeCloseDrawable"
            android:textAlignment="textEnd">

            <RadioButton
                android:id="@+id/inc_by1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:text="@string/inc_radio"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/HotPink"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_dark"
                android:text="@string/inc_radio1"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/Black"
                android:textSize="34sp"
                android:textStyle="bold|italic" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_purple"
                android:text="@string/inc_radio2"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>